Fix lf report box does not get scrollbar

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -1574,6 +1574,7 @@ form[id^="smallpart-start"] {
 	}
 	et2-details.lfReport::part(content) {
 		max-height: 400px;
+		overflow-y: auto;
 	}
 }
 /* This should be not neccessary as soon as we switch boxes into ET2 and no longer using legacy*/
